# evaluix

./: .gitignore  .gitignore.txt  DefaultProfile.yaml  EvaluixConfig.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  test.h5
.github/workflows/: python-publish.yml
ExampleData/: 2020_0446_1_bFC_V-MOKE_286415_0.0_0.0.txt
ExampleData/2020_0446_1_FORC_2021-10-08_18-21-11/: FORC_0004.txt  FORC_0010.txt  FORC_0011.txt  FORC_0013.txt  FORC_0016.txt  FORC_0017.txt  FORC_0018.txt  FORC_0019.txt  FORC_0020.txt  FORC_0022.txt  FORC_0025.txt  FORC_0026.txt  FORC_0029.txt  FORC_0033.txt  FORC_0035.txt  FORC_0038.txt  FORC_0039.txt  FORC_0040.txt  FORC_0045.txt  FORC_0047.txt  FORC_0052.txt  FORC_0056.txt  FORC_0058.txt  FORC_0059.txt  FORC_0066.txt  FORC_0069.txt  FORC_0070.txt  FORC_0071.txt  FORC_0073.txt  FORC_0074.txt
ExampleData/2020_0446_1_bFC_2D-ScanV1_V-MOKE_2021-03-05_10-39-14_2021-03-05_10-39-14/: 2020_0446_1_bFC_V-MOKE_286457_20.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286498_30.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286506_35.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286514_35.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286522_40.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286530_40.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286546_45.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286579_55.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286611_65.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286619_70.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286627_70.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286635_75.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286660_80.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286668_85.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286700_95.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286708_95.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286741_105.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286765_115.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286773_115.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286781_120.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286789_120.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286870_145.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286895_155.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286927_165.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286935_165.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286951_170.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286959_175.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286967_175.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286986_180.0_90.0.txt
ExampleData/2020_0446_1_bFC_2D-ScanV1_V-MOKE_2021-03-05_10-39-14_2021-03-05_10-39-14/trans/: Thumbs.db
ExampleData/2021_0185_1_MINOR_2021-06-17_11-50-41/: Minor_0000.txt  Minor_0004.txt
FutureIdeas/: ManualTestDatastructure.py  MinimumExampleChangeContent.py  MinimumExampleFieldConversion.py  MinimumFitOnTheFly.py
VersionBeforeGithub/: CreateEvaluixConfig.py  CustomWidgets.py  DefaultProfile.yaml  EvaluationFunctions.py  Evaluix2EnvironmentConfig.yaml  Evaluix2_Main.py  FileLoader.py  InstallEvaluix2Env.bat  Macros.yaml  RunEvaluix2.bat  log.txt
VersionBeforeGithub/DrawingsAndIcons/: Evaluix2Drawings.pptx
VersionBeforeGithub/ExampleData/: 2023_0433_14_AfterFC.VSM-Hys-Data  2024_0177_1_LMOKE_2024-08-09_13-53-45.txt
VersionBeforeGithub/ExampleData/2020_0446_1_FORC_2021-10-08_18-21-11/: FORC_0000.txt  FORC_0001.txt  FORC_0002.txt  FORC_0003.txt  FORC_0005.txt  FORC_0006.txt  FORC_0007.txt  FORC_0008.txt  FORC_0009.txt  FORC_0012.txt  FORC_0014.txt  FORC_0015.txt  FORC_0021.txt  FORC_0023.txt  FORC_0024.txt  FORC_0027.txt  FORC_0028.txt  FORC_0030.txt  FORC_0031.txt  FORC_0032.txt  FORC_0034.txt  FORC_0036.txt  FORC_0037.txt  FORC_0041.txt  FORC_0042.txt  FORC_0043.txt  FORC_0044.txt  FORC_0046.txt  FORC_0048.txt  FORC_0049.txt  FORC_0050.txt  FORC_0051.txt  FORC_0053.txt  FORC_0054.txt  FORC_0055.txt  FORC_0057.txt  FORC_0060.txt  FORC_0061.txt  FORC_0062.txt  FORC_0063.txt  (+11 more)
VersionBeforeGithub/ExampleData/2020_0446_1_bFC_2D-ScanV1_V-MOKE_2021-03-05_10-39-14_2021-03-05_10-39-14/: 2020_0446_1_bFC_V-MOKE_286416_0.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286417_5.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286421_5.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286425_10.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286433_10.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286441_15.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286449_15.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286465_20.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286473_25.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286482_25.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286490_30.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286538_45.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286554_50.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286563_50.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286571_55.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286587_60.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286595_60.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286603_65.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286643_75.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286652_80.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286676_85.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286684_90.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286692_90.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286716_100.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286724_100.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286733_105.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286749_110.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286757_110.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286797_125.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286805_125.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286814_130.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286822_130.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286830_135.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286838_135.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286846_140.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286854_140.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286862_145.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286878_150.0_0.0.txt  2020_0446_1_bFC_V-MOKE_286886_150.0_90.0.txt  2020_0446_1_bFC_V-MOKE_286903_155.0_90.0.txt  (+4 more)
VersionBeforeGithub/ExampleData/2023_0424_10µm/: hys.txt
VersionBeforeGithub/GUIs/: Btn_InfoSettings.ui  Evaluix2_MainWindowLayout.ui  FunctionViewer.ui  HDF5Preview.ui  ManualDataDialog.ui  ProfileAndMacros.ui
scripts/: convert_ui.py  update_version.py
src/: log.txt
src/evaluix/: CreateEvaluixConfig.py  CustomWidgets.py  EvaluixConfig.yaml  FileLoader.py  __main__.py  __version__.py  log.txt  update_version.py
tests/: TestProfileTanHyseval.yaml  TestSaving.h5  TestSaving2.h5  TestSaving3.h5  hdf5_printer.py
(+19 files in other folders)
