[metadata]
name = evaluix2
version = attr: evaluix.__version__
author = Arne Jan Vereijken
description = Data Evaluation Software of Arbeitsgruppe Ehresmann (Magnetism)
long_description = file: README.rst
long_description_content_type = text/x-rst
license = "MIT"
license_files = file: LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    exp4-agepy >= 0.2
    numpy >= 1.24.2
    matplotlib
    pandas
    scipy
    pyyaml
    h5py
    scikit-learn
    scikit-image
    ipython_genutils
    ipykernel >= 6.0.3
    NSFopen >= 2.0.0
    pyqt6 >= 6.4.2
    lmfit

entry_points = {
    'console_scripts': [
        'evaluix = evaluix.__main__:main',
    ],
}

#[options.entry_points]
#console_scripts =
#    cli-name = evaluix.mymodule:some_func
#gui_scripts =
#    hello-world = evaluix.something:hello_world

[options.packages.find]
where = src