[metadata]
name = evaluix2
version = attr: evaluix.__version__
author = Arne Jan Vereijken
author_email = arne.vereijken@physik.uni-kassel.de
description = Data Evaluation Software of Arbeitsgruppe Ehresmann (Magnetism)
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/exp4-age/evaluix
license = MIT
license_files = file: LICENSE
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    exp4-agepy >= 0.2
    numpy >= 1.24.2
    matplotlib
    pandas
    scipy
    pyyaml
    h5py
    scikit-learn
    scikit-image == 0.24.0
    ipython_genutils
    ipykernel >= 6.0.3
    NSFopen >= 2.0.0
    pyqt6 >= 6.4.2
    lmfit

[options.entry_points]
console_scripts =
    evaluix = evaluix.__main__:main

[options.packages.find]
where = src
